changes/cleanup to GPA code, merging development latest